# web-wasm-project

frontend/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
